--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,15 @@
     <!-- style -->
     <link rel="stylesheet" href="./style.css">
     <!-- fonts -->
-     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 
 
 </head>
+
 <body>
     <div class="body">
         <header>
@@ -27,6 +31,17 @@
             <button class="btn">Stay Focused</button>
         </div>
     </div>
-    
+    <div class="content">
+        <div class="text-container">
+            <h1>See It in Action</h1>
+            <p>Explore the live preview and imagine your brand in this bold new look.</p>
+            <div><button class="btn">Launch Live Preview</button></div>
+
+        </div>
+        <div class="img-container">
+            <img src="./Assets/wc-mini.png" alt="wc-mini">
+        </div>
+    </div>
 </body>
+
 </html>
