--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+    <!-- body banner  -->
     <div class="body">
         <header>
             <nav>
@@ -31,6 +32,9 @@
             <button class="btn">Stay Focused</button>
         </div>
     </div>
+
+    <!-- content -->
+
     <div class="content">
         <div class="text-container">
             <h1>See It in Action</h1>
@@ -42,6 +46,46 @@
             <img src="./Assets/wc-mini.png" alt="wc-mini">
         </div>
     </div>
+
+    <!-- users -->
+    <div class="users">
+        <h1 class="heading">Joined Thousands of Productive Users</h1>
+
+        <div class="survey">
+            <div class="active-user">
+                <h1>50K</h1>
+                <p>Active Users</p>
+            </div>
+            <div class="active-user">
+                <h1>2M+</h1>
+                <p>Focus Sessions</p>
+            </div>
+            <div class="active-user">
+                <h1>95%</h1>
+                <p>Satisfaction Rate</p>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- reviews -->
+    <div class="review">
+        <h1>What our users say</h1>
+        <div class="review-card">
+            <div class="rating"></div>
+            <h3>Loved by Designers</h3>
+            <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+            <div class="name">
+                <img src="./Assets/avatar.png" alt="avatar">
+                <div class="name-text">
+                    <p>Reviewer name</p>
+                    <p>Date</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+
 </body>
 
 </html>
