--- a/index.html
+++ b/index.html
@@ -70,21 +70,74 @@
 
     <!-- reviews -->
     <div class="review">
+
         <h1>What our users say</h1>
-        <div class="review-card">
-            <div class="rating"></div>
-            <h3>Loved by Designers</h3>
-            <p>This template instantly leveled up our presence.” – Studio Vertex</p>
-            <div class="name">
-                <img src="./Assets/avatar.png" alt="avatar">
-                <div class="name-text">
-                    <p>Reviewer name</p>
-                    <p>Date</p>
+
+        <div class="card-container">
+            <div class="review-card">
+                <div class="rating">
+                    <img src="./Assets/icon-star.png" alt="star">
+                    <img src="./Assets/icon-star.png" alt="star">
+                    <img src="./Assets/icon-star.png" alt="star">
+                    <img src="./Assets/icon-star.png" alt="star">
+                    <img src="./Assets/icon-star.png" alt="star">
+                </div>
+                <div class="comment">
+                    <h3>Loved by Designers</h3>
+                    <p>This template instantly leveled up our presence.” - Studio Vertex</p>
+                </div>
+                <div class="name">
+                    <img src="./Assets/avatar.png" alt="avatar">
+                    <div class="name-text">
+                        <h4>Reviewer name</h4>
+                        <p>Date</p>
+                    </div>
+                </div>
+            </div>
+            <div class="review-card">
+                <div class="rating">
+                    <img src="./Assets/icon-star.png" alt="star">
+                    <img src="./Assets/icon-star.png" alt="star">
+                    <img src="./Assets/icon-star.png" alt="star">
+                    <img src="./Assets/icon-star.png" alt="star">
+                    <!-- <img src="./Assets/icon-star.png" alt="star"> -->
+                </div>
+                <div class="comment">
+                    <h3>Loved by Designers</h3>
+                    <p>This template instantly leveled up our presence.” - Studio Vertex</p>
+                </div>
+                <div class="name">
+                    <img src="./Assets/avatar.png" alt="avatar">
+                    <div class="name-text">
+                        <h4>Reviewer name</h4>
+                        <p>Date</p>
+                    </div>
+                </div>
+            </div>
+            <div class="review-card">
+                <div class="rating">
+                    <img src="./Assets/icon-star.png" alt="star">
+                    <img src="./Assets/icon-star.png" alt="star">
+                    <img src="./Assets/icon-star.png" alt="star">
+                    <!-- <img src="./Assets/icon-star.png" alt="star">
+                    <img src="./Assets/icon-star.png" alt="star"> -->
+                </div>
+                <div class="comment">
+                    <h3>Loved by Designers</h3>
+                    <p>This template instantly leveled up our presence.” - Studio Vertex</p>
+                </div>
+                <div class="name">
+                    <img src="./Assets/avatar.png" alt="avatar">
+                    <div class="name-text">
+                        <h4>Reviewer name</h4>
+                        <p>Date</p>
+                    </div>
                 </div>
             </div>
         </div>
+
     </div>
-    
+
 
 </body>
 
