--- a/index.html
+++ b/index.html
@@ -138,6 +138,16 @@
 
     </div>
 
+    <!-- focus  -->
+     <div class="focus">
+        <div class="focus-title">
+            <h1>Ready to focus better</h1>
+            <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+            <button class="btn">Ger Started Free</button>
+        </div>
+        <div class="focus-img">
+            <img src="./Assets/wc-big.png" alt="wc-focus">
+     </div>
 
 </body>
 
