--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div class="focus-img">
             <img src="./Assets/wc-big.png" alt="wc-focus">
      </div>
-
+    </div>
 </body>
 
 </html>
