--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </div>
 
     <!-- focus  -->
-     <div class="focus">
+    <div class="focus">
         <div class="focus-title">
             <h1>Ready to focus better</h1>
             <p>This template instantly leveled up our presence.” – Studio Vertex</p>
@@ -147,8 +147,55 @@
         </div>
         <div class="focus-img">
             <img src="./Assets/wc-big.png" alt="wc-focus">
-     </div>
+        </div>
     </div>
+
+    <!-- form  -->
+    <div class="form">
+        <h1 class="form-title">Let's Get in Touch</h1>
+
+        <div class="inputs">
+
+            <form action="">
+                <div>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" placeholder="Your email..">
+                </div>
+                <div>
+                    <label for="name"> Name</label>
+                    <input type="text" id="name" placeholder="Your name..">
+                </div>
+                <div>
+                    <label for="message">Message</label>
+                    <textarea id="message" placeholder="Write something.."></textarea>
+                </div>
+
+
+                <button class="btn">Submit</button>
+            </form>
+
+
+        </div>
+    </div>
+    <!-- footer  -->
+     <footer>
+        <div class="foot">
+            <h1>
+                LOGO
+            </h1>
+            <p>
+                Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.
+            </p>
+            <div class="links">
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">How it works</a>
+                <a href="">Services</a>
+            </div>
+        </div>
+            
+     </footer>
+
 </body>
 
 </html>
