--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 </div>
 
 
-                <button class="btn">Submit</button>
+                <button class="btn">Get in Touch</button>
             </form>
 
 
